# ac-ai-agent-research-practice-sample

./: README.md  build_agentcore_zip.ps1  pyproject.toml
src/: agent.py  agentcore.py  agentcore_entrypoint.py  cli.py  config.py  runtime.py
src/prompts/: system_prompt.md
src/schemas/: __init__.py  issue_schemas.py  pull_request_schemas.py
src/services/: __init__.py  github_client.py  issue_service.py  pull_request_service.py
src/tools/: __init__.py  github_issues_tool.py  github_pull_requests_tool.py
